# best_practice_project

./: .editorconfig  .env.example  .gitignore  .markdownlint.json  .markdownlintignore  .pre-commit-config.yaml  .yamllint  CONTRIBUTING.md  DOCUMENTATION_LINTING.md  LICENSE  Makefile  PROJECT_COMPLETION.md  README.md  lint_results.txt  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
docs/: conf.py  index.rst
docs/api/: data_analyzer.rst  data_cleaner.rst  data_loader.rst  modules.rst  visualizer.rst
docs/guides/: configuration_files.md  git_github_guide.md  installation.md  user_guide.md
notebooks/: example_analysis.ipynb
src/data_analysis/: __init__.py  data_analyzer.py  data_cleaner.py  data_loader.py  visualizer.py
tests/: conftest.py
tests/integration/: test_pipeline.py
tests/unit/: test_data_analyzer.py  test_data_cleaner.py  test_data_loader.py  test_visualizer.py
